[package] 
name = "netprune" 
version = "0.1.0" 
edition = "2021" 
 
[dependencies] 
csv = "1.3" 
serde = { version = "1.0", features = ["derive"] } 
clap = { version = "4.5", features = ["derive"] } 
toml = "0.8" 
anyhow = "1.0" 
headless_chrome = "1.0" 
tokio = { version = "1", features = ["full"] } 
