[package] 
name = "netprune" 
version = "0.1.0" 
edition = "2021" 
authors = ["ChronoCoders ^<altug@bytus.io^>"] 
description = "A Rust-based tool for intelligent LinkedIn connection management and filtering" 
readme = "README.md" 
homepage = "https://chronocoders.github.io/netprune/" 
repository = "https://github.com/ChronoCoders/netprune" 
license = "MIT" 
keywords = ["linkedin", "networking", "connections", "csv", "filtering"] 
categories = ["command-line-utilities", "data-structures"] 
 
[dependencies] 
csv = "1.3" 
serde = { version = "1.0", features = ["derive"] } 
clap = { version = "4.5", features = ["derive"] } 
toml = "0.8" 
anyhow = "1.0" 
headless_chrome = "1.0" 
tokio = { version = "1", features = ["full"] } 
rand = "0.9.2" 
